# Aegis

./: .gitignore  Cargo.toml  README.md  SOUL.md.example  config.example.toml  install.sh
.github/workflows/: release.yml
bins/aegis/: Cargo.toml  openapi.yaml
bins/aegis/src/: backup.rs  browser_bridge_adapter.rs  callbacks.rs  chat.rs  cli.rs  commands.rs  completer.rs  connect.rs  gateway.rs  logfile.rs  main.rs  markdown.rs  peer.rs  provider.rs  reedline_input.rs  select.rs  self_update.rs  snapshot.rs  status.rs  trash.rs  tui.rs  uninstall.rs  update.rs  usage.rs  watcher.rs  welcome.rs  worker.rs
bins/aegis/src/server/: error.rs  mod.rs  state.rs
bins/aegis/src/server/handlers/: mod.rs  sessions.rs  system.rs
crates/aegis-a2a/: Cargo.toml
crates/aegis-a2a/src/: auth.rs  client.rs  lib.rs  server.rs  state_machine.rs  task_manager.rs  types.rs
crates/aegis-browser/: Cargo.toml
crates/aegis-browser/src/: bridge.rs  cdp.rs  discovery.rs  lib.rs  tool.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/benches/: graph_bench.rs
crates/aegis-core/src/: agent.rs  ambient.rs  artifacts.rs  channel.rs  compression.rs  config.rs  config_watcher.rs  context_window.rs  dag.rs  discord_channel.rs  event_source.rs  feishu_channel.rs  feishu_crypto.rs  feishu_ws.rs  graph.rs  hooks.rs  http_adapter.rs  interrupt.rs  lib.rs  memory_backend.rs  model_ctx.rs  output_filter.rs  overnight.rs  peer_trust.rs  persistent_tasks.rs  pipeline.rs  plugin.rs  processors.rs  scheduler.rs  server_components.rs  simplex_channel.rs  slack_channel.rs  steer.rs  swap_state.rs  telegram_channel.rs  tot.rs  worker.rs
crates/aegis-core/src/runtime/: authority.rs  delegation.rs  dispatch.rs  engine.rs  handoff.rs  mod.rs  router.rs  watchdog.rs  wisdom.rs
crates/aegis-core/tests/: identity_pipeline.rs  integration.rs  test_guard_output.rs
crates/aegis-feedback/: Cargo.toml
crates/aegis-feedback/skills/: linux-server-hardening.md
crates/aegis-feedback/src/: autotuner.rs  lib.rs  signals.rs  strategy.rs
crates/aegis-goals/: Cargo.toml
crates/aegis-goals/src/: goals.rs  lib.rs
crates/aegis-import/: Cargo.toml
crates/aegis-import/src/: lib.rs
crates/aegis-learning/: Cargo.toml
crates/aegis-learning/src/: collectors.rs  engine.rs  fact.rs  filter.rs  lib.rs  prompt.rs  scheduler.rs  storage.rs
crates/aegis-lsp/: Cargo.toml
crates/aegis-lsp/src/: lib.rs
crates/aegis-mcp/: Cargo.toml
crates/aegis-mcp/src/: client.rs  http_client.rs  lib.rs  middleware.rs  pool.rs  resource.rs  server.rs  transport.rs
crates/aegis-memory/: Cargo.toml
crates/aegis-memory/benches/: memory_bench.rs
crates/aegis-memory/src/: cas.rs  context.rs  entry.rs  filesystem.rs  hybrid_search.rs  lib.rs  sidecar.rs  skill.rs  taxonomy.rs  wal.rs
crates/aegis-perception/: Cargo.toml
crates/aegis-perception/src/: cron.rs  lib.rs  metrics.rs  webhook.rs
crates/aegis-provider/: Cargo.toml
crates/aegis-provider/src/: anthropic.rs  circuit_breaker.rs  cost.rs  credential_pool.rs  endurance.rs  fallback.rs  hedge.rs  lib.rs  minimax.rs  multi_provider.rs  openai.rs  rate_limit.rs  traits.rs
crates/aegis-record/: Cargo.toml
crates/aegis-record/src/: lib.rs  store.rs
crates/aegis-sandbox/: Cargo.toml
crates/aegis-sandbox/src/: error.rs  hardening.rs  lib.rs  linux.rs  policy.rs  presets.rs  runner.rs
crates/aegis-sandbox/tests/: linux_sandbox.rs
crates/aegis-security/: Cargo.toml
crates/aegis-security/src/: audit.rs  identity.rs  lib.rs  permission.rs  rules.rs  secret_vault.rs  security.rs
crates/aegis-selfdev/: Cargo.toml
crates/aegis-selfdev/src/: lib.rs
crates/aegis-selfdev/tests/: selfdev.spec.yaml  selfdev_integration.rs
crates/aegis-tools/: Cargo.toml
crates/aegis-tools/src/: background.rs  batch.rs  calc.rs  control_tool.rs  crates_io.rs  delegation.rs  diagnostics.rs  doc_extract_pro.rs  document.rs  git.rs  http.rs  lib.rs  listing.rs  lsp_nav.rs  memory_search.rs  netdiag.rs  output_buffer.rs  peers.rs  record_search.rs  registry.rs  remote.rs  remotes.rs  selfmod.rs  service.rs  session_tool.rs  skill.rs  sysprobe.rs  system.rs  tools.rs  web_fetch_pro.rs  widget.rs
crates/aegis-types/: Cargo.toml
crates/aegis-types/src/: lib.rs  message.rs  paths.rs
crates/iblt/: Cargo.toml
crates/iblt-store/: Cargo.toml
crates/iblt-store/src/: channel.rs  checkpoint.rs  cleanup.rs  cold.rs  compact.rs  compress.rs  config.rs  domain.rs  drain.rs  encode.rs  event.rs  event_bus.rs  generator.rs  gossip.rs  hot.rs  iblt_codec.rs  index.rs  inflate.rs  journal.rs  ledger.rs  lib.rs  merge.rs  metrics.rs  mount.rs  schema.rs  sort.rs  tier.rs  tuning.rs  types.rs
crates/iblt/src/: adaptive.rs  backpressure.rs  cell.rs  checkpoint.rs  circuit_breaker.rs  compact.rs  compress.rs  conflict_resolve.rs  detector.rs  encoder.rs  frequency_sketch.rs  gossip.rs  iblt_codec.rs  lib.rs  merge.rs  repair.rs  send.rs  sharded.rs  table.rs  thread_local.rs  traits.rs
scripts/: aegis-resume.service  aegis-supervise.sh  aegis-watchdog.sh
