[package]
name = "aegis-a2a"
version.workspace = true
edition.workspace = true
description = "A2A protocol support for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-security = { path = "../aegis-security", version = "1.0.3" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
