[package]
name = "aegis-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CDP-based browser bridge for aegis — connects to user's running browser"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
