[package]
name = "aegis-feedback"
version.workspace = true
edition.workspace = true
description = "Strategy evolution and feedback system for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-types = { path = "../aegis-types", version = "1.0.6" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = "3"
