[package]
name = "aegis-goals"
version.workspace = true
edition.workspace = true
description = "Persistent goal tracking for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-types = { path = "../aegis-types", version = "1.0.4" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = "3"
