[package]
name = "aegis-import"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Cross-harness session import for Aegis"
repository = "https://github.com/Druuugbug/Aegis"

[dependencies]
aegis-types = { path = "../aegis-types", version = "1.0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
