[package]
name = "aegis-lsp"
version.workspace = true
edition.workspace = true
description = "Minimal LSP client for Aegis: feeds language-server diagnostics back to the agent"
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
