[package]
name = "aegis-mcp"
version.workspace = true
edition.workspace = true
description = "MCP protocol client for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-tools = { path = "../aegis-tools", version = "1.0.2" }
aegis-memory = { path = "../aegis-memory", version = "1.0.2", package = "aegis-agent-memory" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = "3"
