[package]
name = "aegis-mcp"
version.workspace = true
edition.workspace = true
description = "MCP protocol client for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-types = { path = "../aegis-types", version = "1.0.7" }
aegis-tools = { path = "../aegis-tools", version = "1.0.7" }
aegis-memory = { path = "../aegis-memory", version = "1.0.7", package = "aegis-agent-memory" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = "3"
