[package]
name = "aegis-agent-memory"
version.workspace = true
edition.workspace = true
description = "Memory system (mempalace) for Aegis"
license.workspace = true
repository.workspace = true

[lib]
name = "aegis_memory"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
dirs-next = { workspace = true }
sha2 = "0.10"
hex = "0.4"
aegis-provider = { path = "../aegis-provider", version = "1.0.3" }
aegis-types = { path = "../aegis-types", version = "1.0.3" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "memory_bench"
harness = false
