[package]
name = "aegis-provider"
version.workspace = true
edition.workspace = true
description = "LLM provider abstraction for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-types = { path = "../aegis-types", version = "1.0.2" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
rand = { workspace = true }
