[package]
name = "aegis-record"
version.workspace = true
edition.workspace = true
description = "Session storage for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
