[package]
name = "aegis-sandbox"
version.workspace = true
edition.workspace = true
description = "Minimal user-space sandbox (landlock + seccomp + user namespace) for Aegis tool execution"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
nix = { version = "0.29", features = ["fs", "process", "sched", "resource", "user", "mount"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
