[package]
name = "aegis-security"
version.workspace = true
edition.workspace = true
description = "Command safety and security checks for Aegis"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-types = { path = "../aegis-types", version = "1.0.7" }
aegis-sandbox = { path = "../aegis-sandbox", version = "1.0.7" }
regex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs-next = { workspace = true }
url = "2"
