[package]
name = "aegis-selfdev"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Self-development engine for Aegis"
repository = "https://github.com/Druuugbug/Aegis"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
