[package]
name = "aegis-tools"
version.workspace = true
edition.workspace = true
description = "Tool system for the Aegis agent runtime"
license.workspace = true
repository.workspace = true

[dependencies]
aegis-types = { path = "../aegis-types", version = "1.0.7" }
aegis-security = { path = "../aegis-security", version = "1.0.7" }
aegis-sandbox = { path = "../aegis-sandbox", version = "1.0.7" }
aegis-a2a = { path = "../aegis-a2a", version = "1.0.7" }
aegis-memory = { path = "../aegis-memory", version = "1.0.7", package = "aegis-agent-memory" }
aegis-record = { path = "../aegis-record", version = "1.0.7" }
aegis-feedback = { path = "../aegis-feedback", version = "1.0.7" }
aegis-lsp = { path = "../aegis-lsp", version = "1.0.7" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
strsim = { workspace = true }
dirs-next = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }

# ── Content ingestion (web_extract → Markdown) ──
# Light, pure-Rust. web_extract is a core tool, so these are unconditional.
htmd = "0.5"
dom_smoothie = "0.18"

# ── Document reading (PDF / Office) for ReadDocumentTool ──
# Pure-Rust, no external runtime. Unconditional so `read_document` is always
# available (functional-completeness goal). A future `lite` build can gate them.
pdf-extract = "0.12"
calamine = "0.36"
dotext = "0.1"

# ── First-tier server/utility tools ──
# calc uses an in-tree parser. sysinfo provides cross-platform host metrics
# (system_status). http_request/list_files reuse reqwest/std — no deps.
sysinfo = "0.39"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
