[package]
name = "aegis-types"
version.workspace = true
edition.workspace = true
description = "Shared types for the Aegis agent runtime"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs-next = { workspace = true }
