[package]
name = "iblt-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IBLT-based tiered storage engine for Aegis"
repository.workspace = true
publish = false

[dependencies]
iblt = { path = "../iblt", version = "1.0.6" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { version = "1", features = ["serde"] }
rand = { workspace = true }
