[package]
name = "iblt"
version.workspace = true
edition.workspace = true
description = "Invertible Bloom Lookup Table framework"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
